--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^7.6.1",
+    "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
