--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-confirm-alert": "^3.0.6",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-hot-toast": "^2.4.0",
